fix: ProjectService